syntax = "proto3";

package account;

service AccountService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message CreateAccountRequest {
  string username = 1;
  string password = 2;
}

message CreateAccountResponse {}
